Implementation of basic user roles for reaching endpoints
